tilt effect range modify

--- a/src/index.html
+++ b/src/index.html
@@ -182,7 +182,7 @@
         <!-- Hero section -->
         <header id="home" class="max-w-[1600px] px-6 lg:px-12 mx-auto grid grid-cols-1 lg:grid-cols-[2fr_3fr] gap-6 mb-18 md:mb-36 items-center">
             <!-- Image -->
-            <img data-tilt data-tilt-glare data-tilt-speed="50" src="./assets/images/hero.jpg" alt="hero" class="rounded-2xl md:rounded-3xl">
+            <img data-tilt data-tilt-glare data-tilt-max="3" src="./assets/images/hero.jpg" alt="hero" class="rounded-2xl md:rounded-3xl">
             <div class="space-y-5 lg:space-y-5 overflow-hidden">
                 <!-- Name -->
                 <h1 id="heroTitle" class="font-medium text-4xl md:text-7xl lg:text-[80px]">
