fix full width text and faq background

--- a/src/index.html
+++ b/src/index.html
@@ -958,7 +958,7 @@
                 <!-- Email copy -->
                 <div class="overflow-hidden flex flex-col justify-center text-center gap-1 mt-10">
                     <p class="anim-in-up text-lg opacity-80">or, mail me directly at</p>
-                    <h4 id="copyEmail" class="text-slide text-[9vw] mx-auto leading-none hover:text-primary transition-all cursor-pointer w-max">
+                    <h4 id="copyEmail" class="text-slide text-[9vw] min-[1600px]:text-[160px] mx-auto leading-none hover:text-primary transition-all cursor-pointer w-max">
                         hello@codeovik.com
                     </h4>
                 </div>
@@ -966,8 +966,8 @@
         </section>
 
         <!-- FAQ section -->
-        <section id="faq" class="max-w-[1600px] px-6 lg:px-12 mx-auto py-10 md:py-18 bg-light-bg dark:bg-dark-bg">
-            <div class="max-w-[1600px] mx-auto overflow-hidden">
+        <section id="faq" class="w-full px-6 lg:px-12 py-12 md:py-18 bg-light-bg dark:bg-dark-bg">
+            <div class="max-w-[1600px] mx-auto">
                 <!-- Title -->
                 <h2 class="lg:w-[800px] mx-auto mb-6 overflow-hidden">
                     <span class="anim-in-up block md:inline before:absolute before:aspect-square before:h-1 before:bg-black dark:before:bg-white relative pl-3 before:transform before:-translate-y-1/2 before:top-1/2 before:left-0 before:rounded-full text-sm md:text-base pr-20 md:bottom-3 font-light">
@@ -1049,7 +1049,7 @@
         <footer class="w-full px-6 lg:px-12 py-12 md:py-18 bg-light-bg dark:bg-dark-bg">
             <div class="max-w-[1600px] mx-auto overflow-hidden">
                 <!-- Wordmark -->
-                <h2 class="text-slide text-[15vw] tracking-widest leading-none font-bold text-black dark:text-white text-center select-none">
+                <h2 class="text-slide text-[15vw] min-[1600px]:text-[270px] tracking-widest leading-none font-bold text-black dark:text-white text-center select-none">
                     CodeOVIK
                 </h2>
                 <!-- Copyright -->
