--- a/src/index.html
+++ b/src/index.html
@@ -242,7 +242,7 @@
         <section id="achievements" class="w-full px-6 lg:px-12 py-12 md:py-18 bg-light-bg dark:bg-dark-bg">
             <div class="max-w-[1600px] mx-auto">
                 <!-- Title -->
-                <h2 class="lg:w-[800px] mx-auto mb-6 overflow-hidden">
+                <h2 class="lg:w-[800px] mx-auto mb-6 overflow-hidden pb-1">
                     <span class="anim-in-up block md:inline before:absolute before:aspect-square before:h-1 before:bg-black dark:before:bg-white relative pl-3 before:transform before:-translate-y-1/2 before:top-1/2 before:left-0 before:rounded-full text-sm md:text-base pr-20 md:bottom-3 font-light">
                         Our Achievements
                     </span>
@@ -283,7 +283,7 @@
         <section id="partner" class="w-full px-6 lg:px-12 py-12 md:py-18 bg-light-bg dark:bg-dark-bg">
             <div class="max-w-[1600px] mx-auto">
                 <!-- Title -->
-                <h2 class="lg:w-[800px] mx-auto mb-6 overflow-hidden">
+                <h2 class="lg:w-[800px] mx-auto mb-6 overflow-hidden pb-1">
                     <span class="anim-in-up block md:inline before:absolute before:aspect-square before:h-1 before:bg-black dark:before:bg-white relative pl-3 before:transform before:-translate-y-1/2 before:top-1/2 before:left-0 before:rounded-full text-sm md:text-base pr-20 md:bottom-3 font-light">
                         Our Clients & Partners
                     </span>
@@ -740,7 +740,7 @@
         <section id="pricing" class="w-full px-6 lg:px-12 py-12 md:py-18 bg-light-bg dark:bg-dark-bg">
             <div class="max-w-[1600px] mx-auto">
                 <!-- Title -->
-                <h2 class="lg:w-[800px] mx-auto mb-6 overflow-hidden">
+                <h2 class="lg:w-[800px] mx-auto mb-6 overflow-hidden pb-1">
                     <span class="anim-in-up block md:inline before:absolute before:aspect-square before:h-1 before:bg-black dark:before:bg-white relative pl-3 before:transform before:-translate-y-1/2 before:top-1/2 before:left-0 before:rounded-full text-sm md:text-base pr-20 md:bottom-3 font-light">
                         My Pricing
                     </span>
@@ -925,7 +925,7 @@
         <section id="contact" class="w-full px-6 lg:px-12 py-12 md:py-18 bg-light-bg dark:bg-dark-bg">
             <div class="max-w-[1600px] mx-auto">
                 <!-- Title -->
-                <h2 class="lg:w-[800px] mx-auto mb-6 overflow-hidden">
+                <h2 class="lg:w-[800px] mx-auto mb-6 overflow-hidden pb-1">
                     <span class="anim-in-up block md:inline before:absolute before:aspect-square before:h-1 before:bg-black dark:before:bg-white relative pl-3 before:transform before:-translate-y-1/2 before:top-1/2 before:left-0 before:rounded-full text-sm md:text-base pr-20 md:bottom-3 font-light">
                         Conatct me
                     </span>
@@ -969,7 +969,7 @@
         <section id="faq" class="w-full px-6 lg:px-12 py-12 md:py-18 bg-light-bg dark:bg-dark-bg">
             <div class="max-w-[1600px] mx-auto">
                 <!-- Title -->
-                <h2 class="lg:w-[800px] mx-auto mb-6 overflow-hidden">
+                <h2 class="lg:w-[800px] mx-auto mb-6 overflow-hidden pb-1">
                     <span class="anim-in-up block md:inline before:absolute before:aspect-square before:h-1 before:bg-black dark:before:bg-white relative pl-3 before:transform before:-translate-y-1/2 before:top-1/2 before:left-0 before:rounded-full text-sm md:text-base pr-20 md:bottom-3 font-light">
                         FAQ
                     </span>
